feat: 커미션 게시글 작가 정보 조회
